// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render both 1`] = `
<div>
  <div
    aria-label="Branch master, Version 4.0.0"
    class="app-information  mko_1ko0jmt-appInformation"
    data-icon="🛈︎"
  >
    <div
      class="app-information__detail  mko_1ko0jmt-appInformation__detail"
    >
      <span>
        Branch: 
        master
      </span>
      <br />
      <span>
        Version: 
        4.0.0
      </span>
    </div>
  </div>
</div>
`;

exports[`should render when branch present 1`] = `
<div>
  <div
    aria-label="Branch master"
    class="app-information  mko_1ko0jmt-appInformation"
    data-icon="🛈︎"
  >
    <div
      class="app-information__detail  mko_1ko0jmt-appInformation__detail"
    >
      <span>
        Branch: 
        master
      </span>
    </div>
  </div>
</div>
`;

exports[`should render when version present 1`] = `
<div>
  <div
    aria-label="Version 4.0.0"
    class="app-information  mko_1ko0jmt-appInformation"
    data-icon="🛈︎"
  >
    <div
      class="app-information__detail  mko_1ko0jmt-appInformation__detail"
    >
      <span>
        Version: 
        4.0.0
      </span>
    </div>
  </div>
</div>
`;
